--- a/index.html
+++ b/index.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>BarberOS - Gestão para Barbearias</title>
 
-    <meta name="description" content="Dualite Alpha Generated Project" />
-    <meta name="author" content="Dualite Alpha" />
+    <meta name="description" content="Sistema de gestão completo para barbearias: agenda, financeiro, estoque e marketing." />
+    <meta name="author" content="BarberOS" />
 
-    <meta property="og:title" content="Vite + React + TS" />
-    <meta property="og:description" content="Dualite Alpha Generated Project" />
+    <meta property="og:title" content="BarberOS - Gestão para Barbearias" />
+    <meta property="og:description" content="Sistema de gestão completo para barbearias." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://ibb.co/67X3xfSV" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Vite + React + TS" />
-    <meta name="twitter:description" content="Dualite Alpha Generated Project" />
-    <meta name="twitter:site" content="@dualitedev" />
-    <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
-
+    
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/HLfD5wgf/dualite-favicon.png" />
-    <link rel="canonical" href="https://alpha.dualite.dev" />
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "AlphaProject",
-        "url": "https://alpha.dualite.dev",
-        "description": "Dualite Alpha Generated Project",
-        "publisher": {
-          "@type": "Organization",
-          "name": "Dualite Alpha"
-        }
-      }
-    </script>
   </head>
   <body>
     <div id="root"></div>
